--- a/source/articles/2007-12-28-lolart.html.markdown
+++ b/source/articles/2007-12-28-lolart.html.markdown
@@ -9,17 +9,9 @@ wp:post_id: '197'
 link: http://island94.dev/2007/12/lolart/
 wp:post_type: post
 files:
-- |-
-  http://mine.icanhascheezburger.com/View.aspx?ucallmeezis128433303032993750.jpg'><img src='http://island94.org/files/island94.org/ucallmeezishmael.jpg' alt='funny pictures' /></a>
-
-  Thought I should (tardily) follow up considering my <a href=
-failed_files:
-- |-
-  http://mine.icanhascheezburger.com/View.aspx?ucallmeezis128433303032993750.jpg'><img src='http://island94.org/files/island94.org/ucallmeezishmael.jpg' alt='funny pictures' /></a>
-
-  Thought I should (tardily) follow up considering my <a href=
+- http://island94.org/files/island94.org/ucallmeezishmael.jpg
 ---
 
-<a href='http://mine.icanhascheezburger.com/View.aspx?ucallmeezis128433303032993750.jpg'><img src='http://island94.org/files/island94.org/ucallmeezishmael.jpg' alt='funny pictures' /></a>
+<a href="http://mine.icanhascheezburger.com/View.aspx?ucallmeezis128433303032993750.jpg"><img src="http://island94.org/files/island94.org/ucallmeezishmael.jpg" alt="funny pictures" /></a>
 
 Thought I should (tardily) follow up considering my <a href="http://island94.org/articles/nonprofit-technology-sandwich">Nonprofit Technology Sandwich</a> was featured on <a href="http://lolnptech.blogspot.com/2007/08/nonprofit-technology-sandwich-anyone.html">LOLnptech.org</a>
